<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.bakingrecipes.MainActivity">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/main_recycler_view"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:visibility="invisible">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/image_wrapper_shape">

            <ImageView
                android:id="@+id/loading_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/loading_animation"
                android:layout_centerInParent="true"
                />
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loader_animation_text"
            android:textSize="20sp"
            android:textColor="@color/colorPrimary"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="4dp"/>
    </LinearLayout>
</RelativeLayout>
