...
                    android:layout_marginRight="16dp"
                    android:text="1"
                    android:textSize="24sp"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/short_description_detail_tv"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="sans-serif-medium"
                    android:textSize="24sp"
                    android:textColor="@android:color/white"
...
